# projet_Qt_calculatrice

./: CMakeLists.txt  README.md  calccontroller.cpp  calccontroller.h  calcexception.cpp  calcexception.h  calcmodel.cpp  calcmodel.h  calcwidget.cpp  calcwidget.h
